<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2021 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AuditoryChallengeMotorImpairmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/auditoryChallengeActionBar"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/auditoryChallengeMotorAccessibleSwitch"
                style="@style/SettingsSwitchStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/auditory_accessible_switch" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/auditoryChallengeChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="18dp"
                    android:paddingRight="18dp"
                    android:paddingTop="18dp"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMotorImpairment"
                        style="@style/ChipStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chip_motor_impairment"
                        app:chipBackgroundColor="@drawable/chip_state_list_bg"
                        app:chipStrokeColor="@drawable/chip_state_list_stroke"
                        app:chipStrokeWidth="1dp" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

        </LinearLayout>

        <TextView
            android:id="@+id/auditoryChallengeMotorImpairmentInstruction"
            style="@style/ChallengeInstructionText"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auditory_challenge_motor_impairment_instruction"
            android:textColor="@color/ea_grey900" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="100dp"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox1"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_1" />

                </LinearLayout>

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox2"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_2" />

                </LinearLayout>

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox3"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_3" />

                </LinearLayout>

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox4"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_4" />

                </LinearLayout>

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox5"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_5" />

                </LinearLayout>

                <LinearLayout android:id="@+id/ChallengeMotorImpairmentCheckboxParent6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/ChallengeMotorImpairmentCheckbox6"
                        style="@style/ChallengeCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/ChallengeMotorImpairmentCheckboxText6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ChallengeCheckboxText"
                        android:text="@string/motor_checkbox_6" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auditoryChallengeMotorBackToMenuButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/auditory_challenge_back_to_story_button_description"
        app:cornerRadius="18dp" />

</RelativeLayout>
